# backend

./: .dockerignore  .editorconfig  .env.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  items.json  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  scrapy.cfg  settings.py  token
.envs.example/: deployment.env.example  dev.env  dev.env.example  docker.env.example  local.env.example
.github/: pull_request_template.md
.github/workflows/: Lint.yml  deploy.yml  ec2-deploy.yml  lint.yml  pre-commit.yml
.ipython/profile_default/startup/: 10-config.py
apps/api_docs/: apps.py  urls.py
apps/api_docs/templates/: redoc-ui.html  swagger-ui.html
apps/authentication/: apps.py  signals.py  urls.py  utils.py
apps/authentication/api/: api.py  schemas.py
apps/core/: __init__.py  admin.py  admin_mixins.py  apps.py  auth.py  checks.py  commands.py  models.py  models_mixins.py  schema.yaml  serializers.py  utils.py
apps/core/abc/: admin.py  commands.py  models.py  serializers.py
apps/core/api/: schemas.py  utils.py
apps/core/fast/: __init__.py  pagination.py  query.py  utils.py
apps/core/migrations/: 0001_initial.py  0002_auto_20210822_1326.py  0003_delete_taskcontrol.py
apps/login/: admin.py  apps.py  queries.py  urls.py  views.py
apps/login/migrations/: 0001_initial.py  0002_auto_20210310_0728.py  0003_delete_profile.py
apps/login/serializers/: users.py
apps/manga/: admin.py  annotate.py  apps.py  documents.py  models.py  queries.py  signals.py  utils.py
apps/manga/api/: api.py  schemas.py  utils.py
apps/manga/migrations/: 0001_initial.py  0002_chapter_created_chapter_modified.py  0003_alter_manga_options_alter_manga_rating.py  0004_remove_manga_alt_title_manga_identifier.py  0005_savelist_alter_category_managers_and_more.py  0006_rename_rss_url_manga_chapters_url_and_more.py  0007_alter_unique_on_savelist.py  0008_alter_category_options_alter_savelist_user_bookmark_and_more.py  0009_remove_bookmark_bookmark_not_both_null_and_more.py  0010_alter_savelist_unique_together.py  0011_manga_popularity.py  0012_chapternotification.py
apps/mangachan/: __init__.py  apps.py  detail.py  image.py  items.py  list.py  pipelines.py  settings.py
apps/parse/: admin.py  apps.py  base_settings.py  cache.py  catalogue.py  cleaning.py  const.py  consts.py  documents.py  exceptions.py  items.py  middleware.py  models.py  parser.py  parsers.py  pipeline.py  queries.py  serializers.py  source.py  spider.py  tasks.py  tests.py  types.py  urls.py  utils.py  views.py
apps/parse/api/: api.py  schemas.py  serializers.py  urls.py  views.py
apps/parse/management/: utils.py
apps/parse/migrations/: 0001_initial.py  0002_auto_20210413_0228.py  0003_auto_20210529_0806.py  0004_auto_20210603_1543.py  0005_auto_20210604_1118.py  0006_manga_alt_title.py  0007_auto_20210607_1923.py  0008_taskcontrol.py  0009_auto_20210616_1353.py  0010_delete_taskcontrol.py  0011_auto_20210618_1048.py  0011_auto_20210622_1319.py  0012_auto_20210622_1333.py  0012_auto_20210624_1054.py  0013_auto_20210623_1144.py  0014_auto_20210623_1239.py  0015_auto_20210623_1321.py  (+16 more)
apps/readmanga/: __init__.py  apps.py  chapter.py  detail.py  image.py  images.py  list.py  pipelines.py  settings.py
apps/readmanga_parser/: admin.py  apps.py  models.py  queries.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/settings/: apps.py  models.py  signals.py
apps/typesense_bind/: apps.py  client.py  functions.py  query.py  schema.py  signals.py
backend/: main.py
docker/web/: Dockerfile  Dockerfile.dev  Dockerfile.rq  docker-compose.dev.yml  docker-entrypoint.sh  rqworker-entrypoint.sh
githooks/: pre-commit
infra/: app.yaml  cloudbuild.yaml  dispatch.yaml  hooks.yaml
login/: admin.py  apps.py  models.py  queries.py  urls.py  views.py
login/migrations/: 0001_initial.py
manga_reader/: api.py  asgi.py  celery.py  celery_config.py  settings.py  urls.py  wsgi.py
manga_reader/config/: settings.py
models/: models.py  user.py
my_auth/: apps.py
my_auth/migrations/: 0001_initial.py
psql_docker/: Dockerfile  db_config.sql  entry-point.sh  get_env.awk
readmanga_parser/: admin.py  apps.py  consts.py  models.py  queries.py  serializers.py  tests.py  urls.py  views.py
readmanga_parser/migrations/: 0001_initial.py  0001_manga_chapters.py  0002_auto_20210309_2240.py  0003_manga_year.py  0004_auto_20210310_0058.py  0005_auto_20210310_0102.py  0006_auto_20210310_0728.py  0006_auto_20210310_0728_squashed_hstore_migration.py  0007_auto_20210311_0325.py  0008_manga_photo.py  0009_auto_20210320_1333.py  0010_auto_20210320_1413.py
readmanga_parser/parser/: manga.json  scrapy.cfg
scripts/: dev-entrypoint.sh  entrypoint.sh  redeploy-hook.sh  run-webserver.sh  web-and-worker.sh
static/: schema.yaml
tests/: Manga.jmx
(+109 files in other folders)
