[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Sora Reader"
authors = [
  "dhvcc <1337kwiz@gmail.com>",
  "ScriptHound <grinkiko@gmail.com>",
  "NikDark <nikefremov.00.008@hotmail.com>",
]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1"
psycopg2 = "^2.8.6"
djangorestframework = "^3.12.2"
Markdown = "^3.3.3"
django-filter = "^2.4.0"
python-dotenv = "^0.15.0"
djangorestframework-simplejwt = "^4.6.0"
Scrapy = "^2.4.1"
argon2-cffi = "^20.1.0"
django-extensions = "^3.1.1"
whitenoise = "^5.2.0"
django-jazzmin = { git = "https://github.com/dhvcc/django-jazzmin.git", rev = "488036718b0c2a9d9b928c8dca257164db64857d" }
requests = "^2.25.1"
pytz = "^2021.1"
dateutils = "^0.6.12"
django-cors-headers = "^3.7.0"
redis = "^3.5.3"
autoflake = "^1.4"
sentry-sdk = "^1.3.0"
gunicorn = "^20.1.0"
Werkzeug = "0.16.0"
django-silk = "^4.1.0"
orjson = "^3.6.4"
ujson = "^4.2.0"
django-elasticsearch-dsl = { git = "https://github.com/dhvcc/django-elasticsearch-dsl.git", rev = "master" }
colorlog = "^6.5.0"
celery = "^5.2.0"
crochet = "^2.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
ipython = "^7.21.0"
pre-commit = "^2.11.1"
rich = "^10.1.0"
django-typomatic = "^1.5.0"
ipdb = "^0.13.9"
django-types = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py37', 'py38']
force-exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | .venv
  | migrations
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_gitignore = true
skip_glob = ['**/migrations/**', '**/.venv/**']
